--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 body {
     font-family: 'Montserrat', sans-serif;
+    box-sizing: border-box; 
+}
+
+* {
+    box-sizing:inherit;
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
